package hilbert.service;

public interface CustomerService {
}
